--- a/SWF_NASA_Demo/WebContent/WEB-INF/src/INIT-swf-demo.properties
+++ b/SWF_NASA_Demo/WebContent/WEB-INF/src/INIT-swf-demo.properties
@@ -1,3 +1,5 @@
+## input AccessID and SecretKey , then rename this file name to "swf-demo.properties"
+
 ####### SWF PROD ENDPOINT #######
 service.url=http://swf.us-east-1.amazonaws.com
   
@@ -10,6 +12,3 @@ AWS.Secret.Key=<YOUR SECRET KEY HERE>
 domain=Samples3
 domainRetentionPeriodInDays=1
 socketTimeout=60000
-
-#mailFrom=
-#mailTo=
